syntax = "proto3";

option csharp_namespace = "Shortcuts.Server";

service Shortcut {
	rpc ExecuteShortcut (ShortcutRequest) returns (ShortcutResponse);
}

message ShortcutRequest {
	string processName = 1;
	string keyStroke = 2;
}

message ShortcutResponse{

}